# mau5law

./: .air-gpu.toml  .air-rag.toml  .air.toml  .gitignore  912nextsteps.md  913layout.txt  9_11nextsteps.md  ADVANCED-MULTICORE-INTEGRATION.md  API_GENERATION_ENDPOINTS.md  COMPONENT_ARCHITECTURE_ANALYSIS.md  COMPREHENSIVE_GOBINARY_ANALYSIS.txt  Caddyfile  DEMO-LOGIN-TESTING-GUIDE.md  DEVELOPMENT.md  DOCKER-MIGRATION-COMPLETE.md  DOCKER-MIGRATION-GUIDE.md  DOCKER_NPM_INTEGRATION.md  Dockerfile.dev  ELK_Analysis_for_Legal_AI.txt  ENHANCED_RAG_ARCHITECTURE_DIAGRAM.md  ERRORS_FIXED_REPORT.txt  ERROR_ANALYSIS_REPORT.txt  EXPERIMENT_CATEGORIZATION.md  GEMMA-EMBEDDINGS-VECTOR-ARCHITECTURE.md  GO_BINARIES_CONSOLIDATION_ANALYSIS.md  GO_MICROSERVICES_CATEGORIZATION.md  GPU_ACCELERATION_DEPLOYMENT_SUMMARY.md  GRPC_MIGRATION_WEEK1-2_COMPLETE.md  GRPC_PROTOBUFFERS_IMPLEMENTATION_PLAN.md  HYDRATION_MISMATCH_RESOLVED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REQUIREMENTS.txt  INTEGRATION_TEST_RESULTS.md  INTELLIGENT_MODEL_SYSTEM_GUIDE.md  LANGCHAIN_INTEGRATION_COMPLETE.md  LEGAL_AI_CACHING_ARCHITECTURE.md  MULTICORE-ARCHITECTURE-BENEFITS.md  Makefile  Modelfile.gemma3-legal  NEURAL_TOPOLOGY_STATUS_REPORT.md  (+157 more)
.claude/: settings.local.json
.githooks/: pre-commit
cuda-mock-gateway/: server.go
docker-scripts/: migrate-to-docker.bat  migrate-to-docker.sh
docs/: ADVANCED_FEATURES_COMPLETE.md  CURRENT_WORK_STATUS.md  INTEGRATION_SUCCESS_SUMMARY.md  cuda-integration-fix-plan.md  (+3 more)
webgpu-redis-starter-repo/sveltekit-frontend/src/lib/wasm/: Cargo.toml  webassembly-accelerator.ts
(+4732 files in other folders)
